# systems-trader

./: .gitignore  CLAUDE_CONTEXT.md  MIGRATION_TRACKER.md  PATTERN_TOOL_SPEC.md  README.md  TRADING_SYSTEMS_ENGINE_SPEC.md  package-lock.json  package.json
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  tauri.conf.json  vite.config.ts
desktop/capabilities/: default.json
desktop/icons/: icon.icns
docs/: ARCHITECTURE.md  VISION.md
docs/specs/: AUTOMATED_SYSTEMS_PLAN.md  RASPBERRY_PI_PLAN.md  (+1 more)
extension/: content.js  manifest.json
legacy/: kcex-trading-assistant.user.js  position-calculator.html
pattern-tool/: .gitignore  SETUP_CHECKLIST.md
python/: requirements.txt
server-setup/: 00-ubuntu-installation.md  01-security-hardening.sh  02-install-caddy.sh  03-install-nodejs.sh  04-install-postgres.sh  05-deploy-app.sh  06-setup-wireguard.sh  07-setup-backups.sh  08-setup-monitoring.sh  QUICKSTART.md  README.md  deploy-trading-app.sh  utils.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
trading-api/: .env.example  README.md  ecosystem.config.cjs  package-lock.json  package.json
trading-engine/: BUILD_CHECKLIST.md  __init__.py
trading_engine/: requirements.txt  visualize_swings.py
tradingview-bridge/: content.js  manifest.json
web/: AUTONOMOUS_FEEDBACK_SYSTEM.md  CLAUDE_STANDARDS_TEMPLATE.md  DEPLOYMENT.md  QUICK_START_GUIDE.md  README.md  ecosystem.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+261 files in other folders)
