[package]
name = "hyperliquid-trader"
version = "0.1.0"
description = "Hyperliquid Trading Platform"
authors = ["Dobri"]
edition = "2021"

[lib]
name = "hyperliquid_trader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
dirs = "5"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
